[misc] add a libwdi pkg-config file

--- a/libwdi/Makefile.am
+++ b/libwdi/Makefile.am
@@ -57,3 +57,7 @@ embedded.h: embedder $(noinst_PROGRAMS)
 
 clean-local:
 	-rm -rf embedded.h embedder embedder.exe
+
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libwdi.pc
