[misc] update URLs for github move

--- a/libwdi/libwdi.rc
+++ b/libwdi/libwdi.rc
@@ -75,7 +75,7 @@ BEGIN
             VALUE "OriginalFilename", "libwdi"
             VALUE "ProductName", "libwdi"
             VALUE "ProductVersion", "1.2.1.154"
-            VALUE "Comments", "http://libwdi.sf.net"
+            VALUE "Comments", "http://libwdi.akeo.ie"
         END
     END
     BLOCK "VarFileInfo"
