--- a/examples/zadic.rc
+++ b/examples/zadic.rc
@@ -81,7 +81,7 @@ BEGIN
             VALUE "OriginalFilename", "zadic.exe"
             VALUE "ProductName", "Zadic"
             VALUE "ProductVersion", "1.2.1.154"
-            VALUE "Comments", "http://libwdi.sf.net"
+            VALUE "Comments", "http://libwdi.akeo.ie"
         END
     END
     BLOCK "VarFileInfo"
