[core] update inf and cat for dynamic WDF & KMDF version
* Files were hardcoded for 01009/1.9
* Closes #1
* Note that upgrading to KMDF 1.11 may require a reboot

--- a/libwdi/.msvc/libwdi_static_2010.vcxproj
+++ b/libwdi/.msvc/libwdi_static_2010.vcxproj
@@ -206,7 +206,10 @@ ren embedded.h embedded.no_is</Command>
     <ClInclude Include="..\tokenizer.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\libusb0.cat.in" />
     <None Include="..\libusb0.inf.in" />
+    <None Include="..\libusbk.cat.in" />
+    <None Include="..\winusb.cat.in" />
     <None Include="..\winusb.inf.in" />
     <None Include="..\libusbk.inf.in" />
   </ItemGroup>
