--- a/libwdi/winusb.cat.in
+++ b/libwdi/winusb.cat.in
@@ -1,5 +1,5 @@
 # List of the binaries referenced by the WinUSB inf
 # These are used to generate and self-sign a .cat file
 
-WdfCoInstaller01009.dll
+WdfCoInstaller#WDF_VERSION#.dll
 winusbcoinstaller2.dll
