--- a/libwdi/libusbk.cat.in
+++ b/libwdi/libusbk.cat.in
@@ -1,7 +1,7 @@
 # List of the binaries referenced by the libusbK inf
 # These are used to generate and self-sign a .cat file
 
-WdfCoInstaller01009.dll
+WdfCoInstaller#WDF_VERSION#.dll
 libusbk.sys
 libusbk.dll
 libusbk_x86.dll
